add some modification, for loop example

--- a/sentiment_project/templates/index.html
+++ b/sentiment_project/templates/index.html
@@ -36,8 +36,8 @@
 </head>
 <body>
     <div class="container">
-        <button onclick="window.location.href='/analyze'">Sentiment Apps</button>
-        <button onclick="window.location.href='/xx'">My AI</button>
+        <button onclick="window.location.href='/sentiment/analyze'">Sentiment Apps</button>
+        <button onclick="window.location.href='/loop'">For loop example</button>
     </div>
 </body>
 </html>
