--- a/sentiment_project/templates/sentiment_app/create_student.html
+++ b/sentiment_project/templates/sentiment_app/create_student.html
@@ -67,7 +67,7 @@
         <h2>All Students</h2>
         <ul>
             {% for student in students %}
-                <li>{{ student.name }} - {{ student.age }}</li>
+                <li>click here{{ student.name }} - {{ student.age }}</li>
             {% endfor %}
         </ul>
     </div>
